# collaborative-learning-extension-jupyter

./: .copier-answers.yml  .gitignore  .jupyter_ystore.db  .prettierignore  .stylelintignore  CHANGELOG.md  Dockerfile  Dockerfile.jupyterlab  Dockerfile.local  LICENSE  README.md  RELEASE.md  environment.yml  index.html  install.json  jest.config.js  junit.xml  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  setup.py  tailwind.config.js  tsconfig.json  untitled.puzzle  webpack.config.js
.Trash-1000/files/: test.puzzle
.Trash-1000/info/: test.puzzle.trashinfo
.github/workflows/: build.yml  check-release.yml  deploy-product-page.yml  docker-publish.yml  prep-release.yml  publish-release.yml
.husky/: pre-commit
assets/: index-BR71qsI1.css  index-CQPEkGU1.css  index-DooUUUrq.js  index-DrUtxH3l.js
binder/: environment.yml  jupyter_config.json  postBuild  requirements.txt  start
collab_learning_extension/: __init__.py  document.py  y_puzzle_solution_doc.py
jupyterhub/: Dockerfile.jupyterhub  docker_compose.yml  entrypoint.sh  jupyterhub_config.py  project_config.yaml
page/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
page/src/: App.jsx  index.css  png.d.ts
page/src/project-page/: ProjectPage.tsx
scss/: base.scss  custom.scss  index.scss
src/: cell_types.ts  factory.ts  index.ts  model.ts  model_factory.ts  widget.tsx  widget_factory.ts
src/__tests__/: collab_learning_extension.spec.ts
src/cell_factory/: cell_factory.ts  code_cell_factory.ts  markdown_cell_factory.ts
src/component/: puzzle_cell_compontent.tsx  puzzle_cell_container_component.tsx  puzzle_toolbar_component.tsx
src/component/cell/: puzzle_cell_compontent.tsx  puzzle_cell_container_component.tsx
src/component/cell/types/: puzzle_code_cell_component.tsx  puzzle_markdown_cell_component.tsx
src/component/util/: puzzle_editor_component.tsx
src/factory/: PuzzleDocModelFactory.ts  PuzzleWidgetFactory.ts  cell_factory.ts  code_cell_factory.ts  markdown_cell_factory.ts
src/factory/schema/: Factory.ts
src/factory/schema/cellFactory/: CellFactory.ts  CodeCellFactory.ts  MultipleChoiceCellFactory.ts  TextCellFactory.ts
src/factory/schema/fieldFactory/: CodeFieldFactory.ts  FieldFactory.ts  MarkdownFieldFactory.ts  MultipleChoiceOptionFieldFactory.ts  TestCodeFieldFactory.ts
src/kernel/: kernel_messager.ts
src/model/: puzzle_doc_model.ts  puzzle_kernel_doc.ts  puzzle_solution_ydoc.ts  puzzle_ydoc.ts
src/model/puzzleYDoc/: PuzzleDocModel.ts  PuzzleYDoc.ts
src/model/puzzleYDoc/maintainer/: ArrayFieldMaintainer.ts  CellsMaintainer.ts  FieldMaintainer.ts  Maintainer.ts  MapFieldMaintainer.ts  StudentCodeMaintainer.ts  TestingCodeMaintainer.ts
src/model/puzzleYDoc/observer/: CellsObserver.ts  DocObserver.ts  DocObserverRegisterService.ts  FieldsObserver.ts  IDocObserverRegister.ts  IDocObsever.ts  PuzzleRootObserver.ts
src/monaco/: language_completer.ts
src/services/: CellFactoryService.ts  FactoryService.ts  FieldFactoryService.ts
src/state/: index.ts  store.ts
src/state/slice/app/: index.ts  kernelExecutionResultSlice.ts  kernelTestResultSlice.ts  userSlice.ts
src/state/slice/yjs/: cellsSlice.ts  fieldSlice.ts  index.ts  listenerMiddleware.ts
src/types/: cell_types.ts  index.ts  kernelTypes.ts  output_types.ts  schemaTypes.ts
src/types/app/: index.ts  kernel.types.ts  user.types.ts
src/types/yjs/: cell.types.ts  field.types.ts  index.ts  main.types.ts
src/types/yjs/fields/: index.ts  solution-field.types.ts  src-field.types.ts
src/ui/: README.md  package-lock.json  package.json  postcss.config.cjs  setupTests.ts  tailwind.config.js  tsconfig.json  vite.config.ts
src/ui/.storybook/: main.ts  preview.tsx
src/ui/src/: index.css  index.ts
src/ui/src/cell/: CellDescription.tsx  CellFooterActionBar.tsx  CellStudentNavigation.tsx  index.ts
src/ui/src/common/: index.ts
src/ui/src/icon/: SVG.tsx  hideIcon.ts  index.ts  runAllIcon.ts  showIcon.ts  submitIcon.ts
src/ui/src/kernel/: CompilingKernelOutputContainer.tsx  KernelOutput.tsx  KernelOutputContainer.tsx  index.ts
src/ui/src/stories/: StoryObj.ts
src/util/: monaco-loader.tsx
src/widget/: PuzzleDocWidget.ts  PuzzlePanel.tsx  index.ts  widget.tsx
src/widget/component/: CellContainerComponent.tsx  FooterComponent.tsx  NoVisibleCellsHintComponent.tsx  TopBarComponent.tsx  puzzle_cell_container_component.tsx  puzzle_toolbar_component.tsx
src/widget/component/cell/: CellComponent.tsx  CellMarkdownDescriptionComponent.tsx  CellSettingsComponent.tsx  CellToolbarComponent.tsx  puzzle_cell_component.tsx  puzzle_cell_container_component.tsx  puzzle_cell_settings_compontent.tsx
src/widget/component/fields/: CodeFieldComponent.tsx  (+1 more)
src/widget/context/: docModelContext.tsx  doc_model_context.tsx  index.ts  kernelContext.tsx  userRoleContext.tsx  user_role_context.tsx
src/widget/kernel/: ExecutionOutputHelper.ts  KernelMessagerService.ts  KernelMessengerService.ts  TestOutputHandler.ts  kernel_messager.ts
src/widget/signal/: UseArrayFieldSignal.tsx  UseFieldSignal.tsx  UseMultiFieldSignal.tsx
style/: base.css  index.css  index.js
testfiles/: Untitled.ipynb  example-text-response.puzzle  factorial.puzzle  output-support.puzzle  puzzle.puzzle  test.puzzle  test2.puzzle  untitled.puzzle  untitled1.puzzle
ui-tests/: package.json
ui-tests/tests/: collab_learning_extension.spec.ts
(+203 files in other folders)
