[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<4.2.0", "hatch-nodejs-version>=0.3.2"]

[project]
name = "collab_learning_extension"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jupyter_server>=2.0.6,<3",
  "jupyter_ydoc>=2,<3",
  "jupyter-collaboration>=2,<2.1",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.entry-points.jupyter_ydoc]
puzzledoc = "collab_learning_extension.document:YPuzzleDoc"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["collab_learning_extension/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"collab_learning_extension/labextension" = "share/jupyter/labextensions/collab_learning_extension"
"install.json" = "share/jupyter/labextensions/collab_learning_extension/install.json"

[tool.hatch.build.hooks.version]
path = "collab_learning_extension/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "collab_learning_extension/labextension/static/style.js",
    "collab_learning_extension/labextension/package.json",
]
skip-if-exists = ["collab_learning_extension/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "collab_learning_extension/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<4.2.0'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
